<resources>
    <string name="app_name">Leilao</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="user_type">Tipo de usuario</string>
    <string name="button_sign_up">Cadastrar</string>
    <string name="close">Encerrar</string>
</resources>
