<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


    <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="text"/>
    <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    <EditText
            android:id="@+id/sign_up_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_type"
            android:inputType="text"/>

    <Button
            android:id="@+id/sign_up_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/button_sign_up"/>
</LinearLayout>